[metadata]
name = colicoords
version = 0.1.1
summary = Create a coordinate system in rod-shaped cells.
description-file = README.rst
author = Jochem Smit
author_email = j.h.smit@rug.nl
home-page = https://github.com/Jhsmit/ColiCoords
license = GNUv3
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Framework :: Jupyter
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3.6
keywords = cells microscopy ecoli coordinates

[options]
packages = find:
install_requires =
    numpy
    matplotlib
    seaborn
    mahotas
    scipy
    h5py
    tifffile
    multiprocess
    tqdm

[options.extras_require]
gui = pyqt>5
cnn = tensorflow; keras
