[metadata]
name = colicoords
summary = Create a coordinate system in rod-shaped cells.
description-file = README.rst
author = Jochem Smit
author_email = jhmit@gmail.com
home-page = https://github.com/Jhsmit/ColiCoords
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Framework :: Jupyter
    License :: OSI Approved :: MIT License    
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3.6
keywords = cells microscopy ecoli coordinates

[files]
packages = 
    colicoords

[wheel]
universal = 1
